actual poster unfinished

--- a/home.html
+++ b/home.html
@@ -68,21 +68,21 @@
                         <h1>Actual</h1>
                     </div>
                 </div>
-                <div class="container-fluid poster-container"></div>
-                <div class="row content-row-home justify-content-center no-gutters">
-                    <div class="col-6 imagecol">
-                        <div class="image-wrapper">
-                            <img src="assets/images/choreopopPoster.jpg" class="d-block w-100 h-auto" alt="First slide">
+                <div class="container-fluid actual-container">
+                    <div class="row actual-row justify-content-center no-gutters">
+                        <div class="col actual-content">
+                            <div class="col-6 popPoster">
+                                <img src="assets/images/choreopopPoster.jpg" class="image-fluid float-left" id="popPoster" alt="image">
+                            </div>
+                            <div class="col-6 popInfo float-right" id="popInfo">
+                                <h4>Lorem ipsum dolor sit amet</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Eos modi similique expedita magnam? Asperiores possimus
+                                    animi libero porro explicabo provident ab nihil,
+                                    doloremque blanditiis culpa dolor omnis perferendis
+                                    labore quidem.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 contentcol">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur ex ratione blanditiis nobis quia?
-                            Atque illo iure libero a ipsum cum dicta inventore minima doloribus
-                            totam labore,
-                            architecto nulla laboriosam?</p>
-                        <button type="button" class="btn btn-link" href="actual.html">Link</button>
                     </div>
                 </div>
             </div>
