--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
                         <h1>Actual</h1>
                     </div>
                 </div>
-                <div class="container-fluid actual-container">
+               <!-- <div class="container-fluid actual-container">
                     <div class="row actual-row justify-content-center no-gutters">
                         <div class="col actual-content">
                             <div class="col-6 popPoster">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
