Contact invitation content to bottom

--- a/actual.html
+++ b/actual.html
@@ -5,45 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        .wrapper {
-            display: inline-block;
-            position: absolute;
-            background-color: black;
-            padding: 0;
-            margin: -5px;
-            width: 100vw;
-            height: 100vh;
-
-        }
-
-        .text {
-            color: blanchedalmond;
-            margin-top: 13%;
-            margin-left: 10%;
-        }
-
-        .linkWrapper {
-            margin-top: 5%;
-            margin-left: 10%;
-
-        }
-
-        .backHome {
-            color: lightskyblue;
-        }
-    </style>
+    <link rel="stylesheet" href="css/inprogress.css" type="text/css">
+    <title>In progress page - Actual</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="text">
+    <div class="wrapper-inprogress">
+        <div class="text-inprogress">
             <h1>Pages under construction</h1>
-            <p>These pages will be Jesus De Vega business pages</p>
+            <p>These pages will be Jesus De Vega Actual pages containing information and image/video carousel gallery of his resent works</p>
         </div>
-        <div class="linkWrapper">
-            <p><b><a class="backHome" href="home.html">Take me back</a></b></p>
+        <div class="linkWrapper-inprogress">
+            <p><b><a class="backHome-inprogress" href="home.html">Take me back</a></b></p>
         </div>
     </div>
 </body>
