--- a/business.html
+++ b/business.html
@@ -5,35 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/inprogress.css" type="text/css">
     <title>Document</title>
-    <style>
-        .wrapper {
-            display: inline-block;
-            position: absolute;
-            background-color: black;
-            padding: 0;
-            margin: -5px;
-            width: 100vw;
-            height: 100vh;
-
-        }
-
-        .text {
-            color: blanchedalmond;
-            margin-top: 13%;
-            margin-left: 10%;
-        }
-
-        .linkWrapper {
-            margin-top: 5%;
-            margin-left: 10%;
-
-        }
-
-        .backHome {
-            color: lightskyblue;
-        }
-    </style>
 </head>
 
 <body>
