--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat:200,300,400,500,600&display=swap"
         rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>deVega Art</title>
     <!-- Favicon icon -->
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
@@ -68,7 +68,7 @@
                         <h1>Actual</h1>
                     </div>
                 </div>
-               <!-- <div class="container-fluid actual-container">
+               <div class="container-fluid actual-container">
                     <div class="row actual-row justify-content-center no-gutters">
                         <div class="col actual-content">
                             <div class="col-6 popPoster">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
@@ -239,7 +239,7 @@
                                 <img src="assets/images/axed.jpg" class="image-fluid float-left" alt="image"
                                     width="100%" min-width="843px" height="auto">
                             </div>
-                            <div class="col-6 invitation">
+                            <div class="col-12 col-md-6 invitation">
                                 <h4>Lorem ipsum dolor sit amet</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Eos modi similique expedita magnam? Asperiores possimus
