Form xl align flex end

--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xl-6 layoutXL">
-                    <div class="row form-row no-gutters m-0 p-0">
+                    <div class="row form-row no-gutters w-100 m-0 p-0">
                         <div class="col contact-content m-0 p-0">
                             <div class="col form">
                                 <form>
