--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
         </nav>
     </header>
     <!-- Home section-->
-    <div id="home" class="container-fluid home">
+    <div id="home" class="container-fluid home h-100">
         <div class="background-box">
             <div class="mask-layer-home">
                 <!-- Title 1 -->
@@ -68,19 +68,26 @@
                         <h1>Actual</h1>
                     </div>
                 </div>
-               <div class="container-fluid actual-container">
+                <div class="container-fluid actual-container">
                     <div class="row actual-row justify-content-center no-gutters">
                         <div class="col actual-content">
-                            <div class="col-6 popPoster">
-                                <img src="assets/images/choreopopPoster.jpg" class="image-fluid float-left" id="popPoster" alt="image">
+                            <div class="col-12 col-md-3 popPoster">
+                                <div class="imgWrap">
+                                <img src="assets/images/choreopopPoster.jpg" class="image-fluid float-left"
+                                    id="popPoster" alt="image" height="100%" min-height="1440" width="100%">
+                                </div>
                             </div>
-                            <div class="col-6 popInfo float-right" id="popInfo">
+                            <div class="col-12 col-md-5 popInfo float-right" id="popInfo">
                                 <h4>Lorem ipsum dolor sit amet</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Eos modi similique expedita magnam? Asperiores possimus
                                     animi libero porro explicabo provident ab nihil,
                                     doloremque blanditiis culpa dolor omnis perferendis
                                     labore quidem.</p>
+                                <div class="linkWrap">
+                                    <button type="button" class="btn btn-link actualLink" id="actualLink"
+                                        href="actual.html">See more »»</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -153,7 +160,7 @@
                 </div>
                 <!-- Content -->
                 <div class="row about-text no-gutters">
-                    <div class="col-12 col-xl-6 about-text-content">
+                    <div class="col-12 col-xl-6 about-text-content uppercase">
                         <p>I have alvays been interested in processes and in the act of creation itself.</p>
                         <p>My passion for music (and music making) has let me to exploring the relationship
                             between music production/composition and choreography/movement generation. I am
