new actual image

--- a/home.html
+++ b/home.html
@@ -71,19 +71,19 @@
                 <div class="container-fluid actual-container">
                     <div class="row actual-row justify-content-center no-gutters">
                         <div class="col actual-content">
-                            <div class="col-12 col-md-3 popPoster">
-                                <div class="imgWrap">
-                                <img src="assets/images/choreopopPoster.jpg" class="image-fluid float-left"
-                                    id="popPoster" alt="image" height="100%" min-height="1440" width="100%">
+                            <div class="col-12 col-md-8 popPoster">
+                                <div class="col-12 col-md-6 imgWrap">
+                                    <img src="assets/images/blindpop.jpg" class="image-fluid" id="popPoster"
+                                        alt="image" height="auto" width="100%">
                                 </div>
-                            </div>
-                            <div class="col-12 col-md-5 popInfo float-right" id="popInfo">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Eos modi similique expedita magnam? Asperiores possimus
-                                    animi libero porro explicabo provident ab nihil,
-                                    doloremque blanditiis culpa dolor omnis perferendis
-                                    labore quidem.</p>
+                                <div class="col-12 popInfo">
+                                    <h4>Lorem ipsum dolor sit amet</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        Eos modi similique expedita magnam? Asperiores possimus
+                                        animi libero porro explicabo provident ab nihil,
+                                        doloremque blanditiis culpa dolor omnis perferendis
+                                        labore quidem.</p>
+                                </div>
                                 <div class="linkWrap">
                                     <button type="button" class="btn btn-link actualLink" id="actualLink"
                                         href="actual.html">See more »»</button>
