actual content text positioning and shadow

--- a/home.html
+++ b/home.html
@@ -77,12 +77,10 @@
                                         alt="image" height="auto" width="100%">
                                 </div>
                                 <div class="col-12 popInfo">
-                                    <h4>Lorem ipsum dolor sit amet</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Eos modi similique expedita magnam? Asperiores possimus
-                                        animi libero porro explicabo provident ab nihil,
-                                        doloremque blanditiis culpa dolor omnis perferendis
-                                        labore quidem.</p>
+                                    <h2>CHOREOPOP</h2>
+                                    <p class="infoText">
+                                    A choreograpghed music album, is a hybrid between a dance performance, a pop  music concert, and live video-clips.
+                                    </p>
                                 </div>
                                 <div class="linkWrap">
                                     <button type="button" class="btn btn-link actualLink" id="actualLink"
