screens 768 and up for actual

--- a/home.html
+++ b/home.html
@@ -68,25 +68,42 @@
                         <h1>Actual</h1>
                     </div>
                 </div>
-                <div class="container-fluid actual-container">
-                    <div class="row actual-row justify-content-center no-gutters">
-                        <div class="col actual-content">
-                            <div class="col-12 col-md-8 popPoster">
-                                <div class="col-12 col-md-6 imgWrap">
-                                    <img src="assets/images/blindpop.jpg" class="image-fluid" id="popPoster"
-                                        alt="image" height="auto" width="100%">
+
+                <div class="col actual-content m-0">
+                    <div class="col-12 popPoster m-0 p-0">
+                        <div class="col-12 col-12 imgWrap m-0">
+                            <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image"
+                                height="auto" width="100%">
+
+                            <div class="popInfo">
+                                <div class="popTitle">
+                                    <h2><u>CHOREOPOP</u></h2>
                                 </div>
-                                <div class="col-12 popInfo">
-                                    <h2>CHOREOPOP</h2>
+                                <div class="Info3d">
                                     <p class="infoText">
-                                    A choreograpghed music album, is a hybrid between a dance performance, a pop  music concert, and live video-clips.
+                                        A choreograpghed music album; <br> a hybrid between a dance performance, a
+                                        pop music concert, and live video-clips.
+                                        <button type="button" class="btn btn-link actualLink uppercase p-0"
+                                            id="actualLinkID" href="actual.html">See more »»</button>
                                     </p>
                                 </div>
-                                <div class="linkWrap">
-                                    <button type="button" class="btn btn-link actualLink" id="actualLink"
-                                        href="actual.html">See more »»</button>
-                                </div>
                             </div>
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-8 popInfo-small m-0">
+                        <div class="popTitle">
+                            <h2>CHOREOPOP</h2>
+                        </div>
+                        <div class="Info3d">
+                            <p class="infoText">
+                                A choreograpghed music album, is a hybrid between a dance performance, a pop
+                                music concert, and live video-clips.
+                            </p>
+                        </div>
+                        <div class="linkWrap">
+                            <button type="button" class="btn btn-link actualLink" id="actualLinkID-small"
+                                href="actual.html">See more »»</button>
                         </div>
                     </div>
                 </div>
