--- a/home.html
+++ b/home.html
@@ -76,14 +76,14 @@
                                 height="auto" width="100%">
 
                             <div class="popInfo">
-                                <div class="popTitle">
+                                <div class="popTitle m-0 p-0">
                                     <h2><u>CHOREOPOP</u></h2>
                                 </div>
                                 <div class="Info3d">
                                     <p class="infoText">
                                         A choreograpghed music album; <br> a hybrid between a dance performance, a
                                         pop music concert, and live video-clips.
-                                        <button type="button" class="btn btn-link actualLink uppercase p-0"
+                                        <button type="button" class="btn btn-link actualLink uppercase p-0 m-0"
                                             id="actualLinkID" href="actual.html">See more »»</button>
                                     </p>
                                 </div>
@@ -93,18 +93,18 @@
                     </div>
                     <div class="col-12 col-md-8 popInfo-small m-0">
                         <div class="popTitle">
-                            <h2>CHOREOPOP</h2>
+                            <h2><u>CHOREOPOP</u></h2>
                         </div>
-                        <div class="Info3d">
-                            <p class="infoText">
-                                A choreograpghed music album, is a hybrid between a dance performance, a pop
-                                music concert, and live video-clips.
-                            </p>
-                        </div>
-                        <div class="linkWrap">
-                            <button type="button" class="btn btn-link actualLink" id="actualLinkID-small"
-                                href="actual.html">See more »»</button>
-                        </div>
+                    </div>
+                    <div class="Info3d">
+                        <p class="infoText">
+                            "Choreopop" is a choreograpghed music album; a hybrid between a dance performance, a pop
+                            music concert, and live video-clips.
+                        </p>
+                    </div>
+                    <div class="linkWrap">
+                        <button type="button" class="btn btn-link actualLink" id="actualLinkID-small"
+                            href="actual.html">See more »»</button>
                     </div>
                 </div>
             </div>
