actual new layout for screens md and don

--- a/choreopop.html
+++ b/choreopop.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/inprogress.css" type="text/css">
-    <title>In progress page - Actual</title>
+    <title>In progress page - CHOREOPOP</title>
 </head>
 
 <body>
     <div class="wrapper-inprogress">
         <div class="text-inprogress">
             <h1>Pages under construction</h1>
-            <p>These pages will be Jesus De Vega Actual pages containing information and image/video carousel gallery of his resent works</p>
+            <p>These pages will be Jesus De Vega Actual page containing information and image/video carousel gallery of his resent work "Choreopop"</p>
         </div>
         <div class="linkWrapper-inprogress">
             <p><b><a class="backHome-inprogress" href="home.html">Take me back</a></b></p>
