--- a/home.html
+++ b/home.html
@@ -59,53 +59,66 @@
         </nav>
     </header>
     <!-- Home section-->
-    <div id="home" class="container-fluid home h-100">
+    <div id="home" class="container-fluid home">
         <div class="background-box">
             <div class="mask-layer-home">
                 <!-- Title 1 -->
-                <div class="row title-row home-row no-gutters">
+                <div class="row title-row home-row justiy-content-center no-gutters">
+        
                     <div class="col text-center uppercase title actual-title">
                         <h1>Actual</h1>
                     </div>
                 </div>
-
+                <div class="col spacing-div"></div>
                 <div class="col actual-content m-0">
                     <div class="col-12 popPoster m-0 p-0">
                         <div class="col-12 col-12 imgWrap m-0">
                             <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image"
                                 height="auto" width="100%">
-
-                            <div class="popInfo">
-                                <div class="popTitle m-0 p-0">
+                            <!-- Content only on screens from 420px and below -->
+                            <div class="col-12 popInfo m-0" id="popInfo">
+                                <div class="popTitle">
                                     <h2><u>CHOREOPOP</u></h2>
                                 </div>
                                 <div class="Info3d">
                                     <p class="infoText">
-                                        A choreograpghed music album; <br> a hybrid between a dance performance, a
-                                        pop music concert, and live video-clips.
-                                        <button type="button" class="btn btn-link actualLink uppercase p-0 m-0"
-                                            id="actualLinkID" href="actual.html">See more »»</button>
+                                        "Choreopop" is a choreograpghed music album; <br> a hybrid between a dance
+                                        performance, a pop
+                                        music concert, and live video-clips. <br>
+                                    </p>
+                                    <p class="infoText linkWrap">
+                                        <button type="button" class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
+                                            href="actual.html"><p>See more »»</p></button>
                                     </p>
                                 </div>
                             </div>
-
+                            <!-- Content only on screens from 768px and above-->
                         </div>
                     </div>
-                    <div class="col-12 col-md-8 popInfo-small m-0">
-                        <div class="popTitle">
-                            <h2><u>CHOREOPOP</u></h2>
+                    <div class="separator"></div>
+                    <div class="col-12 popPoster m-0 p-0">
+                            <div class="col-12 col-12 imgWrap pt-0 m-0">
+                                <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image"
+                                    height="auto" width="100%">
+                                <!-- Content only on screens from 420px and below -->
+                                <div class="col-12 popInfo m-0" id="glitterInfo">
+                                    <div class="glitterTitle">
+                                        <h2><u>GLITTERGODS/ <br> STIGMA</u></h2>
+                                    </div>
+                                    <div class="Info3d">
+                                        <p class="infoText">
+                                            Freedom and opression, pride and shame, love and hate.<br>
+                                            "Glittergods/ Stigma" is a quest for freedom and to shine through strength and fragility. <br>
+                                        </p>
+                                        <p class="infoText linkWrap">
+                                            <button type="button" class="btn btn-link uppercase actualLink p-0" id="glitterLinkID"
+                                                href="glittergods.html"><p>See more »»</p></button>
+                                        </p>
+                                    </div>
+                                </div>
+                                <!-- Content only on screens from 768px and above-->
+                            </div>
                         </div>
-                    </div>
-                    <div class="Info3d">
-                        <p class="infoText">
-                            "Choreopop" is a choreograpghed music album; a hybrid between a dance performance, a pop
-                            music concert, and live video-clips.
-                        </p>
-                    </div>
-                    <div class="linkWrap">
-                        <button type="button" class="btn btn-link actualLink" id="actualLinkID-small"
-                            href="actual.html">See more »»</button>
-                    </div>
                 </div>
             </div>
         </div>
