index fix & hoem layout try

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
@@ -17,51 +17,39 @@
         href="https://fonts.googleapis.com/css?family=Julius+Sans+One:|Montserrat:100,200,400,600,800|Source+Code+Pro:200,300,400,500,700,900&display=swap"
         rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="/css/index.css" type="text/css">
     <title>deVega matrix</title>
     <!-- Favicon icon -->
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
 </head>
 
-
 <body>
-    <div class="video-container">
-        <video id="videoIntro" autoplay muted loop>
-            <source src="assets/video/intro.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div class="container-fluid">
-        <div class="row no-gutters">
-            <div class="col-12 text-center logo-container">
-                <a class="btn btn-link logo" id="logo-button" href="index.html">JESUS DE VEGA</a>
+        <div class="video-container">
+            <video id="videoIntro" autoplay muted loop>
+                <source src="assets/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-12 text-center logo-container">
+                    <a class="btn btn-link logo" id="logo-button" href="index.html">JESUS DE VEGA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid entry-container">
-        <div class="row no-gutters">
-            <div class="col-12 col-md-4 text-center art-container">
-                <a class="btn btn-link" id="entry-art" href="home.html">MY ART</a>
-            </div>
-            <div class="col-12 col-md-4 text-center and-container">
-                <h1 class="display-1" id="and-sign">&</h1>
-            </div>
-            <div class="col-12 col-md-4 text-center business-container">
-                <a class="btn btn-link" id="entry-business" href="business.html">BUSINESS</a>
+        <div class="container-fluid entry-container">
+            <div class="row justify-content-between no-gutters">
+                <div class="col-12 col-md-4 text-center art-container">
+                    <a class="btn btn-link" id="entry-art" href="home.html">MY ART</a>
+                </div>
+                <!--<div class="col-12 col-md-4 text-center and-container">
+                    <h1 class="display-1" id="and-sign">&</h1>
+                </div>-->
+                <div class="col-12 col-md-4 text-center business-container">
+                    <a class="btn btn-link" id="entry-business" href="business.html">BUSINESS</a>
+                </div>
             </div>
         </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
