--- a/home.html
+++ b/home.html
@@ -36,7 +36,6 @@
                 <div class="nav navbar-nav navbar-left logo-container">
                     <a class="navbar-brand btn btn-link logo" id="logo-button" href="index.html">JESUS DE VEGA</a>
                 </div>
-
                 <button onclick="navToggle()" type="button" class="navbar-toggler" data-toggle="collapse"
                     data-target="#navbarCollapseMenu" aria-controls="navbarCollapseMenu" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -59,12 +58,12 @@
         </nav>
     </header>
     <!-- Home section-->
+
     <div id="home" class="container-fluid home">
         <div class="background-box">
             <div class="mask-layer-home">
                 <!-- Title 1 -->
                 <div class="row title-row home-row justiy-content-center no-gutters">
-        
                     <div class="col text-center uppercase title actual-title">
                         <h1>Actual</h1>
                     </div>
@@ -88,7 +87,7 @@
                                     </p>
                                     <p class="infoText linkWrap">
                                         <button type="button" class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
-                                            href="actual.html"><p>See more »»</p></button>
+                                            href="choreopop.html"><p>See more »»</p></button>
                                     </p>
                                 </div>
                             </div>
