refixed actual from sm to min 768px

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
                 <div class="col spacing-div"></div>
                 <div class="col actual-content m-0">
                     <div class="col-12 popPoster m-0 p-0">
-                        <div class="col-12 col-12 imgWrap m-0">
+                        <div class="col-12 imgWrap m-0">
                             <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image"
                                 height="auto" width="100%">
                             <!-- Content only on screens from 420px and below -->
@@ -85,10 +85,10 @@
                                         performance, a pop
                                         music concert, and live video-clips. <br>
                                     </p>
-                                    <p class="infoText linkWrap">
+                                    <div class="infoText linkWrap">
                                         <button type="button" class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
                                             href="choreopop.html"><p>See more »»</p></button>
-                                    </p>
+                                    </div>
                                 </div>
                             </div>
                             <!-- Content only on screens from 768px and above-->
@@ -96,7 +96,7 @@
                     </div>
                     <div class="separator"></div>
                     <div class="col-12 popPoster m-0 p-0">
-                            <div class="col-12 col-12 imgWrap pt-0 m-0">
+                            <div class="col-12 imgWrap pt-0 m-0">
                                 <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image"
                                     height="auto" width="100%">
                                 <!-- Content only on screens from 420px and below -->
@@ -109,10 +109,10 @@
                                             Freedom and opression, pride and shame, love and hate.<br>
                                             "Glittergods/ Stigma" is a quest for freedom and to shine through strength and fragility. <br>
                                         </p>
-                                        <p class="infoText linkWrap">
+                                        <div class="infoText linkWrap">
                                             <button type="button" class="btn btn-link uppercase actualLink p-0" id="glitterLinkID"
                                                 href="glittergods.html"><p>See more »»</p></button>
-                                        </p>
+                                        </div>
                                     </div>
                                 </div>
                                 <!-- Content only on screens from 768px and above-->
