fixed section and background image  height  issues

--- a/home.html
+++ b/home.html
@@ -86,8 +86,8 @@
                                         music concert, and live video-clips. <br>
                                     </p>
                                     <div class="infoText linkWrap">
-                                        <button type="button" class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
-                                            href="choreopop.html"><p>See more »»</p></button>
+                                        <a class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
+                                            href="choreopop.html" target="_blank">See more »»</a>
                                     </div>
                                 </div>
                             </div>
@@ -96,28 +96,29 @@
                     </div>
                     <div class="separator"></div>
                     <div class="col-12 popPoster m-0 p-0">
-                            <div class="col-12 imgWrap pt-0 m-0">
-                                <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image"
-                                    height="auto" width="100%">
-                                <!-- Content only on screens from 420px and below -->
-                                <div class="col-12 popInfo m-0" id="glitterInfo">
-                                    <div class="glitterTitle">
-                                        <h2><u>GLITTERGODS/ <br> STIGMA</u></h2>
-                                    </div>
-                                    <div class="Info3d">
-                                        <p class="infoText">
-                                            Freedom and opression, pride and shame, love and hate.<br>
-                                            "Glittergods/ Stigma" is a quest for freedom and to shine through strength and fragility. <br>
-                                        </p>
-                                        <div class="infoText linkWrap">
-                                            <button type="button" class="btn btn-link uppercase actualLink p-0" id="glitterLinkID"
-                                                href="glittergods.html"><p>See more »»</p></button>
-                                        </div>
+                        <div class="col-12 imgWrap pt-0 m-0">
+                            <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image"
+                                height="auto" width="100%">
+                            <!-- Content only on screens from 420px and below -->
+                            <div class="col-12 popInfo m-0" id="glitterInfo">
+                                <div class="glitterTitle">
+                                    <h2><u>GLITTERGODS/ <br> STIGMA</u></h2>
+                                </div>
+                                <div class="Info3d">
+                                    <p class="infoText">
+                                        Freedom and opression, pride and shame, love and hate.<br>
+                                        "Glittergods/ Stigma" is a quest for freedom and to shine through strength and
+                                        fragility. <br>
+                                    </p>
+                                    <div class="infoText linkWrap">
+                                        <a class="btn btn-link uppercase actualLink p-0" id="glitterLinkID"
+                                            href="glittergods.html">See more »»</a>
                                     </div>
                                 </div>
-                                <!-- Content only on screens from 768px and above-->
                             </div>
+                            <!-- Content only on screens from 768px and above-->
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -125,11 +126,13 @@
     <!-- Divider 1 -->
     <div class="container-fluid divider divider-one">
         <div class="row no-gutters text-center">
-            <div class="col-12 quotation">
-                <h4>"Art is not what you see, but what you make others see."</h4>
-            </div>
-            <div class="col-12 reference">
-                <h6>~ Edgar Degas</h6>
+            <div class="col divider-col">
+                <div class="col-12 quotation">
+                    <h4>"Art is not what you see, but what you make others see."</h4>
+                </div>
+                <div class="col-12 reference">
+                    <h6>~ Edgar Degas</h6>
+                </div>
             </div>
         </div>
     </div>
