--- a/home.html
+++ b/home.html
@@ -59,15 +59,16 @@
     </header>
     <!-- Home section-->
 
-    <div id="home" class="container-fluid home">
+    <section id="home" class="container-fluid home">
         <div class="background-box">
             <div class="mask-layer-home">
                 <!-- Title 1 -->
-                <div class="row title-row home-row justiy-content-center no-gutters">
+                <div class="row title-row home-row justiy-content-center no-gutters w-100">
                     <div class="col text-center uppercase title actual-title">
                         <h1>Actual</h1>
                     </div>
                 </div>
+                <!-- Content 1 -->
                 <div class="col spacing-div"></div>
                 <div class="col actual-content m-0">
                     <div class="col-12 popPoster m-0 p-0">
@@ -75,8 +76,8 @@
                             <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image"
                                 height="auto" width="100%">
                             <!-- Content only on screens from 420px and below -->
-                            <div class="col-12 popInfo m-0" id="popInfo">
-                                <div class="popTitle">
+                            <div class="col-12 popInfo tm-0" id="popInfo">
+                                <div class="d-flex popTitle ml-0">
                                     <h2><u>CHOREOPOP</u></h2>
                                 </div>
                                 <div class="Info3d">
@@ -85,10 +86,10 @@
                                         performance, a pop
                                         music concert, and live video-clips. <br>
                                     </p>
-                                    <div class="infoText linkWrap">
+                                    <nav class="infoText linkWrap">
                                         <a class="btn btn-link uppercase actualLink p-0" id="actualLinkID"
                                             href="choreopop.html" target="_blank">See more »»</a>
-                                    </div>
+                                    </nav>
                                 </div>
                             </div>
                             <!-- Content only on screens from 768px and above-->
@@ -101,7 +102,7 @@
                                 height="auto" width="100%">
                             <!-- Content only on screens from 420px and below -->
                             <div class="col-12 popInfo m-0" id="glitterInfo">
-                                <div class="glitterTitle">
+                                <div class="d-flex glitterTitle ml-0">
                                     <h2><u>GLITTERGODS/ <br> STIGMA</u></h2>
                                 </div>
                                 <div class="Info3d">
@@ -110,10 +111,10 @@
                                         "Glittergods/ Stigma" is a quest for freedom and to shine through strength and
                                         fragility. <br>
                                     </p>
-                                    <div class="infoText linkWrap">
+                                    <nav class="infoText linkWrap">
                                         <a class="btn btn-link uppercase actualLink p-0" id="glitterLinkID"
                                             href="glittergods.html">See more »»</a>
-                                    </div>
+                                    </nav>
                                 </div>
                             </div>
                             <!-- Content only on screens from 768px and above-->
@@ -122,73 +123,79 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Divider 1 -->
-    <div class="container-fluid divider divider-one">
-        <div class="row no-gutters text-center">
-            <div class="col divider-col">
-                <div class="col-12 quotation">
-                    <h4>"Art is not what you see, but what you make others see."</h4>
-                </div>
-                <div class="col-12 reference">
-                    <h6>~ Edgar Degas</h6>
-                </div>
+    <section class="container-fluid divider">
+        <div class="row no-gutters">
+            <div class="col-12 quotation">
+                <h4>"Art is not what you see, but what you make others see."</h4>
             </div>
         </div>
-    </div>
+        <div class="row no-gutters">
+            <div class="col-12 reference">
+                <h6>~ Edgar Degas</h6>
+            </div>
+        </div>
+    </section>
     <!-- Gallery section-->
-    <div id="gallery" class="container-fluid gallery">
+    <section id="gallery" class="container-fluid gallery">
         <div class="background-box-gallery">
-            <!-- Title 1 -->
+            <!-- Title 2 -->
             <div class="row title-row gallery-row no-gutters">
                 <div class="col text-center uppercase title gallery-title">
                     <h1>Gallery</h1>
                 </div>
             </div>
+            <!-- Content 2 -->
         </div>
-    </div>
+    </section>
     <!-- Divider 2 -->
-    <div class="container-fluid divider divider-two">
-        <div class="row quotation no-gutters text-center">
+    <section class="container-fluid divider">
+        <div class="row no-gutters">
             <div class="col-12 quotation">
                 <h4>"The job of the artist is always to deepen the mystery."</h4>
             </div>
+        </div>
+        <div class="row no-gutters">
             <div class="col-12 reference">
                 <h6>~ Francis Bacon</h6>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Archive section-->
-    <div id="archive" class="container-fluid archive">
+    <section id="archive" class="container-fluid archive">
         <div class="background-box-archive">
-            <!-- Title 1 -->
+            <!-- Title 3 -->
             <div class="row title-row archive-row no-gutters">
                 <div class="col text-center uppercase title archive-title">
                     <h1>Archive</h1>
                 </div>
             </div>
+            <!-- Content 3 -->
         </div>
-    </div>
+    </section>
     <!-- Divider 3 -->
-    <div class="container-fluid divider divider-three">
-        <div class="row quotation no-gutters text-center">
+    <section class="container-fluid divider">
+        <div class="row no-gutters">
             <div class="col-12 quotation">
                 <h4>"Sometimes with art, it is important just to look."</h4>
             </div>
+        </div>
+        <div class="row no-gutters">
             <div class="col-12 reference">
                 <h6>~ Marina Abramović</h6>
             </div>
         </div>
-    </div>
+    </section>
     <!-- About section-->
-    <div id="about" class="container-fluid about">
+    <section id="about" class="container-fluid about">
         <div class="background-box-about">
-            <!-- Title 1 -->
+            <!-- Title 4 -->
             <div class="row title-row about-row no-gutters">
                 <div class="col text-center uppercase title about-title">
                     <h1>About</h1>
                 </div>
-                <!-- Content -->
+                <!-- Content 4 -->
                 <div class="row about-text no-gutters">
                     <div class="col-12 col-xl-6 about-text-content uppercase">
                         <p>I have alvays been interested in processes and in the act of creation itself.</p>
@@ -247,27 +254,27 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Divider 4 -->
-    <div class="container-fluid divider divider-four">
-        <div class="row quotation no-gutters text-center">
+    <section class="container-fluid divider">
+        <div class="row no-gutters text-center">
             <div class="col-12 quotation" id="quotation-four">
                 <h4>Dance your way to the future.</h4>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Contact section-->
-    <div id="contact" class="container-fluid contact">
+    <section id="contact" class="container-fluid contact">
         <div class="background-box-contact">
-            <!-- Title 1 -->
+            <!-- Title 5 -->
             <div class="row title-row contact-row no-gutters">
                 <div class="col text-center uppercase title contact-title">
                     <h1>Contact</h1>
                 </div>
             </div>
-            <!-- Content -->
+            <!-- Content 5 -->
             <div class="row white-overlay no-gutters">
                 <div class="col-12 col-xl-6 layoutXL">
                     <div class="row iam-row no-gutters">
@@ -331,11 +338,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Footer-->
     <footer class="container-fluid">
         <div class="row footer-row no-gutters m-0 p-0">
-            <div class="col footer-col text-align-center col-social">
+            <nav class="col footer-col text-align-center col-social">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank"
@@ -357,7 +364,7 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </footer>
 
