fixed some html errors

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <!-- Navigation bar -->
-        <nav class="navbar navbar-default fixed-top p-0" role="navigation">
+        <nav class="navbar navbar-default fixed-top p-0">
             <div class="container-fluid" id="nav-container">
                 <!-- Logo -->
                 <div class="nav navbar-nav navbar-left logo-container">
@@ -73,8 +73,7 @@
                 <div class="col actual-content m-0">
                     <div class="col-12 popPoster m-0 p-0">
                         <div class="col-12 imgWrap m-0">
-                            <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image"
-                                height="auto" width="100%">
+                            <img src="assets/images/blindpop.jpg" class="image-fluid" id="popImage" alt="image">
                             <!-- Content only on screens from 420px and below -->
                             <div class="col-12 popInfo tm-0" id="popInfo">
                                 <div class="d-flex popTitle ml-0">
@@ -98,8 +97,7 @@
                     <div class="separator"></div>
                     <div class="col-12 popPoster m-0 p-0">
                         <div class="col-12 imgWrap pt-0 m-0">
-                            <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image"
-                                height="auto" width="100%">
+                            <img src="assets/images/glittersq.jpg" class="image-fluid" id="glitterImage" alt="image">
                             <!-- Content only on screens from 420px and below -->
                             <div class="col-12 popInfo m-0" id="glitterInfo">
                                 <div class="d-flex glitterTitle ml-0">
