--- a/home.html
+++ b/home.html
@@ -297,9 +297,9 @@
                         <div class="col contact-content m-0 p-0">
                             <div class="col form">
                                 <form>
-                                    <label for="InputName">
+                                    <section class="contactForm">
                                         <h5>Contact me here. I will get back to you at the earliest!</h5>
-                                    </label>
+                                    </section>
                                     <div class="form-group">
                                         <textarea class="form-control" id="FormControlTextarea" name="message" rows="4"
                                             placeholder="Message" required></textarea>
@@ -311,9 +311,9 @@
                                             </div>
 
                                         </div>
-                                        <label for="InputEmail"></label>
+                                        <label for="email"></label>
                                         <input type="email" class="form-control" id="email" name="email" required
-                                            aria-describedby="emailHelp" placeholder="Email">
+                                            aria-describedby="email" placeholder="Email">
                                     </div>
 
 
@@ -324,11 +324,11 @@
                 </div>
                 <div class="links">
                     <button type="submit" class="btn btn-default float-right" id="submitContact">
-                        <h5>Send »»</h5>
+                        Send »»
                     </button>
                 </div>
                 <div class="col col-12 footer-col download-col">
-                    <a href="assets/cv/Jesus de Vega CV .pdf" target="_blank" class="download float-left" id="myCV">
+                    <a href="assets/cv/Jesus de Vega CV.pdf" target="_blank" class="download float-left" id="myCV">
                         <h6>Download C.V.</h6>
                     </a>
                     <small id="downloadHelp" class="form-text float-left text-muted">Download my
