--- a/home.html
+++ b/home.html
@@ -302,7 +302,7 @@
                                         <h5>Contact me here. I will get back to you at the earliest!</h5>
                                     </section>
                                     <div class="form-group">
-                                        <textarea class="form-control" id="FormControlTextarea" name="message" rows="4"
+                                        <textarea class="form-control" id="FormControlTextarea" name="message" rows="4" maxlength="6000"
                                             placeholder="Message" required></textarea>
                                     </div>
                                     <div class="form-group" id="InputName">
