--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         href="https://fonts.googleapis.com/css?family=Julius+Sans+One:|Montserrat:100,200,400,600,800|Source+Code+Pro:200,300,400,500,700,900&display=swap"
         rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="/css/index.css" type="text/css">
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>deVega matrix</title>
     <!-- Favicon icon -->
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png">
 
 </head>
 
@@ -43,9 +43,6 @@
                 <div class="col-12 col-md-4 text-center art-container">
                     <a class="btn btn-link" id="entry-art" href="home.html">MY ART</a>
                 </div>
-                <!--<div class="col-12 col-md-4 text-center and-container">
-                    <h1 class="display-1" id="and-sign">&</h1>
-                </div>-->
                 <div class="col-12 col-md-4 text-center business-container">
                     <a class="btn btn-link" id="entry-business" href="business.html">BUSINESS</a>
                 </div>
