index video and layout?

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         href="https://fonts.googleapis.com/css?family=Julius+Sans+One:|Montserrat:100,200,400,600,800|Source+Code+Pro:200,300,400,500,700,900&display=swap"
         rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="../css/index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <title>deVega matrix</title>
     <!-- Favicon icon -->
-    <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
 </head>
 
