--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
     <title>deVega Art</title>
     <!-- Favicon icon -->
     <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
+    <!-- try this-->
 
 </head>
 
