--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat:200,300,400,500,600&display=swap"
         rel="stylesheet">
     <!-- CSS style.css-->
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>deVega Art</title>
     <!-- Favicon icon -->
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
-    <!-- try this-->
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+
 
 </head>
 
