--- a/business.html
+++ b/business.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/inprogress.css" type="text/css">
-    <title>Document</title>
+    <title>In progress page</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <p>These pages will be Jesus De Vega business pages</p>
         </div>
         <div class="linkWrapper">
-            <p><b><a class="backHome" href="home.html">Take me back</a></b></p>
+            <a class="backHome" href="home.html">Take me back</a>
         </div>
     </div>
 </body>
