--- a/home.html
+++ b/home.html
@@ -188,7 +188,7 @@
     </section>
     <!-- About section-->
     <section id="about" class="container-fluid about">
-        <div class="background-box-about">
+        <div class="background-box-about mt-0 pt-0">
             <!-- Title 4 -->
             <div class="row title-row about-row no-gutters">
                 <div class="col text-center uppercase title about-title">
