--- a/home.html
+++ b/home.html
@@ -309,7 +309,7 @@
                                     <div class="form-group" id="InputName">
                                         <div class="row no-gutters m-0">
                                             <div class="col">
-                                                <input type="text" class="form-control" placeholder="Name" required>
+                                                <input type="text" class="form-control" id="name" placeholder="Name" required>
                                             </div>
 
                                         </div>
@@ -340,6 +340,7 @@
         </div>
     </section>
     <!-- Footer-->
+    <!-- Social media icons/ links -->
     <footer class="container-fluid">
         <div class="row footer-row no-gutters m-0 p-0">
             <nav class="col footer-col text-align-center col-social">
