--- a/choreopop.html
+++ b/choreopop.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/inprogress.css" type="text/css">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Favicon icon -->
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="stylesheet" href="css/inprogress.css" type="text/css">
     <title>In progress page - CHOREOPOP</title>
 </head>
 
 <body>
-    <div class="wrapper-inprogress">
-        <div class="text-inprogress">
+    <div class="wrapper">
+        <div class="text">
             <h1>Pages under construction</h1>
             <p>These pages will be Jesus De Vega Actual page containing information and image/video carousel gallery of his resent work "Choreopop"</p>
         </div>
-        <div class="linkWrapper-inprogress">
-            <p><b><a class="backHome-inprogress" href="home.html">Take me back</a></b></p>
+        <div class="linkWrapper">
+            <a class="backHome" href="home.html">Take me back</a>
         </div>
     </div>
 </body>
